--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,30 @@ body {
   color: #434455;
   background-color: #ffffff;
 }
+
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+}
+
+ul,
+ol {
+  margin: 0;
+  padding: 0;
+}
+
+.container {
+  width: 1158px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0 auto;
+}
+
 /* --------------------Header -------------------------*/
 .header {
 }
