--- a/css/style.css
+++ b/css/style.css
@@ -213,9 +213,9 @@ ol {
   letter-spacing: 0.02em;
   color: var(--color-grey);
 }
-.portfolio-picture-p {
+/* .portfolio-picture-p {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--color-slate);
-}
+} */
