--- a/css/style.css
+++ b/css/style.css
@@ -145,6 +145,19 @@ ol {
 
 /* ----------------------Two section------------------- */
 
+.two-section {
+  padding: 120px 0;
+}
+
+.two-list {
+  display: flex;
+  gap: 24px;
+}
+
+.two-list-li {
+  width: calc((100% - 72px) / 4);
+}
+
 .hidden-title {
 }
 .two-title {
@@ -153,6 +166,7 @@ ol {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: var(--color-grey);
+  margin-bottom: 8px;
 }
 .p-text {
   font-size: 16px;
