--- a/css/style.css
+++ b/css/style.css
@@ -263,6 +263,17 @@ img {
 }
 
 /* ---------------------Portfolio main  buttons---------------------- */
+.portfolio-section {
+  padding-top: 96px;
+  padding-bottom: 120px;
+}
+
+.portfolio-list-buttons {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+  margin-bottom: 72px;
+}
 
 .button {
   font-weight: 500;
@@ -272,15 +283,28 @@ img {
   color: var(--color-iris);
   background-color: var(--color-cloud);
   cursor: pointer;
+  padding: 12px 24px;
+  border: 1px solid var(--color-cornflower);
+  border-radius: 4px;
 }
 .button:hover,
 .button:focus {
   color: #ffffff;
   background-color: #404bbf;
+  border: 1px solid transparent;
 }
 
 /*----------------------- Portfolio picture section ------------------*/
 
+.portfolio-picture-list {
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 24px;
+  row-gap: 48px;
+}
+.portfolio-list-li {
+  width: calc((100% - 48px) / 3);
+}
 .portfolio-picture-title {
   font-weight: 500;
   font-size: 20px;
