--- a/css/style.css
+++ b/css/style.css
@@ -305,12 +305,19 @@ img {
 .portfolio-list-li {
   width: calc((100% - 48px) / 3);
 }
+
+.portfolio-list-div {
+  padding: 32px 16px;
+  border: 1px solid #e7e9fc;
+  border-top: none;
+}
 .portfolio-picture-title {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: var(--color-grey);
+  margin-bottom: 8px;
 }
 .portfolio-picture-p {
   font-size: 16px;
