--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,7 @@ ol {
 /* --------------------Header -------------------------*/
 .header-containet {
   display: flex;
+  align-items: center;
 }
 .header {
   border-bottom: 1px solid #e7e9fc;
@@ -78,6 +79,7 @@ ol {
   gap: 40px;
 }
 .nav-list {
+  display: block;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -180,6 +182,7 @@ ol {
   margin-bottom: 8px;
 }
 .p-text {
+  text-align: left;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -251,7 +254,7 @@ img {
   margin-bottom: 8px;
 }
 
-.p-text {
+.p-texts {
   text-align: center;
 }
 /* --------------------Footer section----------------------- */
@@ -271,6 +274,7 @@ img {
 
 .footer-p {
   max-width: 264px;
+  color: white;
 }
 
 /* ---------------------Portfolio main  buttons---------------------- */
